<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_selection_background"
    tools:context=".ui.activities.ChooseActivities">

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:hint="DD/MM/YYY"
        android:inputType="date"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:selectionRequired="true"
        app:singleSelection="false" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_parks"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="141dp"
        android:layout_height="74dp"
        android:checkable="true"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/parks"
        android:textAlignment="center"
        android:textSize="16sp"
        app:chipBackgroundColor="#feb06a"
        app:chipCornerRadius="20dp"
        app:chipStrokeColor="@color/white"
        app:chipStrokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315"
        app:rippleColor="#feb06a"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_restaurants"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="141dp"
        android:layout_height="73dp"
        android:checkable="true"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/restaurants"
        android:textAlignment="center"
        android:textSize="16sp"
        app:chipBackgroundColor="#feb06a"
        app:chipCornerRadius="20dp"
        app:chipStrokeColor="@color/white"
        app:chipStrokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314"
        app:rippleColor="#feb06a"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_wellness_experiences"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="230dp"
        android:layout_height="73dp"
        android:checkable="true"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/welness_experiences"
        android:textAlignment="center"
        android:textSize="16sp"
        app:chipBackgroundColor="#feb06a"
        app:chipCornerRadius="20dp"
        app:chipStrokeColor="@color/white"
        app:chipStrokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"
        app:rippleColor="#feb06a"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_landmarks"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="141dp"
        android:layout_height="73dp"
        android:checkable="true"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/landmarks"
        android:textAlignment="center"
        android:textSize="16sp"
        app:chipBackgroundColor="#feb06a"
        app:chipCornerRadius="20dp"
        app:chipStrokeColor="@color/white"
        app:chipStrokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        app:rippleColor="#feb06a" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_bars"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="141dp"
        android:layout_height="73dp"
        android:checkable="true"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/bars"
        android:textAlignment="center"
        android:textSize="16sp"
        app:chipBackgroundColor="#feb06a"
        app:chipCornerRadius="20dp"
        app:chipStrokeColor="@color/white"
        app:chipStrokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        app:rippleColor="#feb06a" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_sporting_events"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="230dp"
        android:layout_height="73dp"
        android:checkable="true"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/sporting_events"
        android:textAlignment="center"
        android:textSize="16sp"
        app:chipBackgroundColor="#feb06a"
        app:chipCornerRadius="20dp"
        app:chipStrokeColor="@color/white"
        app:chipStrokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673"
        app:rippleColor="#feb06a" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_live_events"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="141dp"
        android:layout_height="73dp"
        android:checkable="true"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/live_events"
        android:textAlignment="center"
        android:textSize="16sp"
        app:chipBackgroundColor="#feb06a"
        app:chipCornerRadius="20dp"
        app:chipStrokeColor="@color/white"
        app:chipStrokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799"
        app:rippleColor="#feb06a" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_concerts"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="141dp"
        android:layout_height="73dp"
        android:checkable="true"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/concerts"
        android:textAlignment="center"
        android:textSize="16sp"
        app:chipBackgroundColor="#feb06a"
        app:chipCornerRadius="20dp"
        app:chipStrokeColor="@color/white"
        app:chipStrokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799"
        app:rippleColor="#feb06a" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="170dp"
        android:layout_height="71dp"
        android:backgroundTint="#84c885"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/submit"
        android:textColor="#2c2c2c"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>